# trendlens_ai

./: .editorconfig  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  BRANCH_STRATEGY.md  DAY2_NONTECHNICAL_PLAN.md  ONBOARDING.md  ROADMAP.md  SPRINT_DAY2_EMERGENCY.md  STACK_DECISION.md  TEAM_CHECKLIST.md
scripts/: setup.sh
src/trendlens/: cli.py
src/trendlens.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/trendlens_ai/: api.py  scheduler.py
src/trendlens_ai.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/trendlens_ai/agents/: __init__.py  base_agent.py  crew_orchestrator.py  langchain_agent.py  orchestrator.py
src/trendlens_ai/agents/tools/: __init__.py  data_fetchers.py  processors.py  registry.py  storage.py
tests/: test_agents.py  test_cli.py  test_langchain_agent.py  test_scheduler_api.py
