[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "trendlens_ai"
version = "0.0.0"
description = "TrendLens AI hackathon project"
requires-python = ">=3.8"

[tool.black]
line-length = 88

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-q"
testpaths = ["tests"]
